<resources>
    <string name="app_name">albertapp</string>
    <string name="hello_world">Hello Albert!</string>
    <string name="action_settings">Settings</string>
    <string name="confirm">Confirm</string>
    <string name="lookup_item">Lookup Item</string>
    <string name="search">Search</string>
    <string name="empty">Empty</string>
    <string name="done">Done</string>
    <string name="back">Back</string>
    <string name="pay">Pay</string>
    <string name="login">Login</string>
    <string name="pin">Pin</string>
    <string name="cancel">Cancel</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>

</resources>
